policy page updated

--- a/templates/index_enhanced.html
+++ b/templates/index_enhanced.html
@@ -114,6 +114,9 @@
                         <a class="nav-link" href="{{ url_for('generate_report') }}"><i class="bi bi-magic"></i> 生成报告</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('report_generation.report_generation_page') }}"><i class="bi bi-bar-chart-line"></i> 生产报告</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('upload_file') }}"><i class="bi bi-upload"></i> 上传报告</a>
                     </li>
                     <li class="nav-item">
